License under GPL 3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "dedupetool"
 version = "0.1.0"
 authors = ["Octavia Togami <octavia.togami@gmail.com>"]
+license = "GPL-3.0-or-later"
 edition = "2018"
 
 [dependencies]
