Heavily improve performance by streamlining max-c

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ strip = true
 
 [dependencies]
 console = "0.15.0"
+futures = "0.3.21"
 libc = "0.2.119"
 num-format = "0.4.0"
 size_format = "1.0.2"
@@ -23,4 +24,4 @@ features = ["derive"]
 
 [dependencies.tokio]
 version = "1.17.0"
-features = ["sync", "rt-multi-thread", "macros", "fs"]
+features = ["rt-multi-thread", "macros", "fs"]
