--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,24 +6,37 @@ license = "GPL-3.0-or-later"
 edition = "2021"
 publish = false
 
-[profile.release]
-codegen-units = 1
-lto = true
-strip = true
-
 [dependencies]
-console = "0.15.5"
-futures = "0.3.27"
-libc = "0.2.140"
+console = "0.15.8"
+futures = "0.3.30"
+libc = "0.2.155"
 num-format = "0.4.4"
-size_format = "1.0.2"
-thiserror = "1.0.39"
-fclones = "0.30.0"
+thiserror = "1.0.62"
+fclones = "0.34.0"
+walkdir = "2.5.0"
+rayon = "1.10.0"
+indicatif = "0.17.8"
+tokio-stream = "0.1.15"
+num_cpus = "1.16.0"
+flume = "0.11.0"
+rangemap = "1.5.1"
+pin-project-lite = "0.2.14"
+parse-display = "0.9.1"
 
 [dependencies.clap]
-version = "4.1.8"
+version = "4.5.9"
 features = ["derive"]
 
+[dependencies.fastcdc]
+path = "../fastcdc-rs"
+features = ["futures"]
+
 [dependencies.tokio]
-version = "1.26.0"
+version = "1.38.0"
 features = ["rt-multi-thread", "macros", "fs", "sync"]
+
+[dev-dependencies]
+assert_unordered = "0.3.5"
+
+[profile.release]
+debug = true
