--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dedupetool"
-version = "0.1.3-dev"
+version = "0.1.3"
 authors = ["Octavia Togami <octavia.togami@gmail.com>"]
 license = "MPL-2"
 edition = "2021"
